# dss_openapi/src/models/get_dsid_200_response_all_of_result.rs
@@ -1,0 +1,33 @@
+/*
+ * dSS API
+ *
+ * dSS Server JSON Interface
+ *
+ * The version of the OpenAPI document: 1.6.0
+ * Contact: xgcssch@github.com
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct GetDsid200ResponseAllOfResult {
+    /// dSID = SGTIN-96 of the dSS
+    #[serde(rename = "dSID", skip_serializing_if = "Option::is_none")]
+    pub d_sid: Option<String>,
+    /// dSUID of the dSS
+    #[serde(rename = "dSUID", skip_serializing_if = "Option::is_none")]
+    pub d_suid: Option<String>,
+}
+
+impl GetDsid200ResponseAllOfResult {
+    pub fn new() -> GetDsid200ResponseAllOfResult {
+        GetDsid200ResponseAllOfResult {
+            d_sid: None,
+            d_suid: None,
+        }
+    }
+}
+
+
